--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
+      - name: installation python
+        uses: actions/setup-python@v3
+        with:
+          python-version: "3.10"
+            
       - name: exécution des tests
           run:| 
             test_add.py
