--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,10 @@ jobs:
         with:
           python-version: "3.10"
 
+      - name: Install all dependencies
+        run: | 
+         pip -m install -r requirements.txt 
+
       - name: Execute Tests
         run: |
           python -m unittest test_add.py
