--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,10 @@ jobs:
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
-
+          
+      - name: Install Dependencies
+        run: |
+          python -m pip install -r requirements.txt
      
       - name: Execute Tests
         run: |
